docs(docs): :memo: Created a readme
Added a readme file for my repo

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,9 @@
 {
 	"recommendations": [
-		"tabnine.tabnine-vscode"
+		"bierner.markdown-preview-github-styles",
+		"bierner.markdown-footnotes",
+		"yzhang.markdown-all-in-one",
+		"bierner.markdown-checkbox"
 	],
 	
 }
