--- a/package.json
+++ b/package.json
@@ -20,5 +20,17 @@
   "dependencies": {
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0"
-  }
+  },
+  "directories": {
+    "example": "examples"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/csc530/crypto-exhcange-API.git"
+  },
+  "bugs": {
+    "url": "https://github.com/csc530/crypto-exhcange-API/issues"
+  },
+  "homepage": "https://github.com/csc530/crypto-exhcange-API#readme"
 }
