--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "conventionalCommits.scopes": [
         "main",
         "docs",
-        "examples"
+        "examples",
+        "modules"
     ]
 }
