build(main): :bookmark: Add keywords

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "exhange",
     "crypto-exchange",
     "trading",
-    "dotenv"
+    "dotenv",
+    "API",
+    "learn",
+    "tutorial"
   ],
   "author": "Christofer Cousins",
   "license": "ISC",
