--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
             "## Flow of Contents"
         ]
     },
+    "markdown.extension.toc.levels": "1..3",
     "conventionalCommits.scopes": [
         "main",
         "docs",
